--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,8 @@
-# These individuals contributed to the hbnb project in this repository 
+# This file lists all individuals having contributed content to the repository.
 
-Musa Muhammad Etudaye    <musaawwaletudaye@gmail.com>
+
+Jennifer Huang <133@holbertonschool.com>
+Alexa Orrico <210@holbertonschool.com>
+Joann Vuong <130@holbertonschool.com>
+Stella Ugochukwu <stellaugochukwu100@gmail.com>
+Lovina Osaigbovo <mails4vina@gmail.com> 
